dist_man1_MANS=

if BUILD_LUDIRIUMD
  dist_man1_MANS+=ludiriumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=ludirium-qt.1
endif

if BUILD_LUDIRIUM_CLI
  dist_man1_MANS+=ludirium-cli.1
endif

if BUILD_LUDIRIUM_TX
  dist_man1_MANS+=ludirium-tx.1
endif

if BUILD_LUDIRIUM_UTIL
  dist_man1_MANS+=ludirium-util.1
endif

if ENABLE_WALLET
if BUILD_LUDIRIUM_WALLET
  dist_man1_MANS+=ludirium-wallet.1
endif
endif
